# there

./: .gitignore  Cargo.toml  Makefile
docs/: design-philosophy.md  future-rendering-techniques.md
game-client/: Cargo.toml
game-client/src/: camera.rs  input.rs  lib.rs  net.rs  player.rs  renderer.rs  terrain.rs  terrain.wgsl
game-core/: Cargo.toml
game-core/src/: anim_state.rs  camera.rs  lib.rs  movement.rs  protocol.rs  terrain.rs
game-render/: Cargo.toml
game-render/src/: animation.rs  atmosphere.rs  blob_shadow.rs  bloom.rs  bloom_compute.wgsl  clips.rs  cloud_shadow.rs  cloud_shadow_compute.wgsl  common.wgsl  depth_utils.wgsl  exposure.rs  exposure_histogram.wgsl  exposure_reduce.wgsl  frame.rs  fullscreen.wgsl  fxaa.rs  fxaa.wgsl  grass.rs  grass.wgsl  grass_compute.wgsl  heightmap_utils.wgsl  instanced_mesh.rs  lib.rs  noise.wgsl  pipeline.rs  player.rs  player.wgsl  postprocess.rs  postprocess.wgsl  rocks.rs  rocks.wgsl  rocks_compute.wgsl  scatter.rs  shadow.rs  skeleton.rs  sky.rs  sky.wgsl  ssao.rs  ssao.wgsl  terrain.rs  (+9 more)
game-server/: Cargo.toml
game-server/src/: game_loop.rs  main.rs  room.rs
game-snapshot/: Cargo.toml
game-snapshot/src/: main.rs  render.rs
plans/: 2026-04-09-init.md  2026-04-10-rendering-polish.md  2026-04-10-rendering-push.md  2026-04-10-visual-iteration-loop.md  2026-04-11-controls-ui.md  MEMORY.md  bugfixes-polish-2026-04-12.md  camera-polish-2026-04-12.md  fixes-polish-2026-04-14.md  multiplayer-rooms-chat-2026-04-14.md  player-camera-scenarios-2026-04-12.md  player-character-camera-2026-04-11.md  rendering-upgrade-2026-04-10.md  safari-water-fix-optimization-2026-04-12.md  tree-lighting-refactor-2026-04-14.md
snapshots/scenarios/: diagonal.json  follow_forward.json  follow_strafe.json  follow_then_idle.json  idle_back.json  idle_front.json  idle_side.json  strafe_left.json  strafe_right.json  turntable.json  walk_backward.json  (+1 more)
web/: boot.js  index.html  style.css
(+18 files in other folders)
