[package]
name = "game-client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
game-core = { path = "../game-core" }
glam = { workspace = true }
log = { workspace = true }
wgpu = { version = "24", features = ["webgpu"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "Element",
    "console",
] }
js-sys = "0.3"
console_log = "1"
