[package]
name = "game-server"
version = "0.1.0"
edition = "2024"

[dependencies]
game-core = { path = "../game-core" }
glam = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
log = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "set-header"] }
http = "1"
futures-util = "0.3"
env_logger = "0.11"
