[package]
name = "game-snapshot"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "game-snapshot"
path = "src/main.rs"

[dependencies]
game-core = { path = "../game-core" }
game-render = { path = "../game-render" }
glam = { workspace = true }
log = { workspace = true }
wgpu = "24"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
